# nemesis

./: checkdiff.sh  create.sh  create_e2_package.sh  extract_e2_package.sh  make_cvs_image.sh  make_e1_image_15.sh  make_e2_image_16.sh  make_image_20.sh  src_patch.sh
logo/cvs/: bild  bild1  bild2  ferase  swap
misc/epgui/: Makefile  epgui.cfg  epgui.cpp  epgui.h  epgui_lang.conf
misc/mv/: build.txt  epg_inst.sh  getepg  icons.esml  imagemaker.txt  lang.txt.nl  mkdist  mv-lite.cfg  mv.cfg  readme.txt
misc/mv-500/: changes.txt  getepgd  goepg  lang.txt.de  lang.txt.en  lang.txt.es  lang.txt.fr  lang.txt.it  mvdatadir  skin.esml  util.cpp
misc/mv-500/src/: Makefile  Makefile.head  channel.cpp  dbsoft@dbsoft.mydamin.ch  execthread.cpp  execthread.h  favmanager.cpp  filemap.cpp  inputdefreader.h  inputmanager.h  keys.h  menu.cpp  menu.h  mhwepg.h  mhwepg2.c  mhwepg2.h  mv-conf.cpp  mv.cpp  mv.h  mvccat.cpp  util.cpp  xmltv.cpp
misc/mv/src/: Makefile.head  Makefile.lite  Makefile.tail  conf.h  defs.h  enigmacache.cpp  enigmacache.h  epgui.cpp  imdb.cpp  inputdefreader.cpp  inputmanager.cpp  keys.h  mhwepg.c  multiepg.c  mv.cpp  otvepg.c  otvepg.h  si_tables.h  somain.cpp  text.h
misc/socket/: Makefile  Makefile-mipsel  Makefile-ppc  nemesis.cfg  nemesisc  nemesisc.c  nemesisd  nemesisd.c
openembedded-1.5/conf/machine/: dm500plus.conf  dm600pvr.conf  dm7020.conf
openembedded-1.6/conf/distro/: opendreambox.conf
openembedded-1.6/conf/machine/: dm500hd.conf  dm7020hd.conf  dm7025.conf  dm800.conf  dm8000.conf  dm800se.conf
openembedded-1.6/recipes/base-files/: base-files_3.0.14.bb
openembedded-1.6/recipes/base-passwd/: base-passwd_3.5.20.bb
openembedded-1.6/recipes/base-passwd/files/: root-pwd.patch
openembedded-1.6/recipes/busybox/: busybox_1.15.3.bb
openembedded-1.6/recipes/dreambox/: dreambox-bootlogo.bb  dreambox-dccamd.bb  dreambox-dvb-tools-v3.bb  dreambox-feed-configs.bb  dreambox-nemesis.bb  dreambox-tuner-usb.bb
openembedded-1.6/recipes/dreambox/dreambox-bootlogo/: backdrop-dm500hd-2.mvi  backdrop-dm800-2.mvi  backdrop-dm8000-2.mvi  backdrop-dm800se-2.mvi  backdrop.mvi  bootlogo-dm500hd-2.mvi  bootlogo-dm800-2.mvi  bootlogo-dm8000-2.mvi  bootlogo-dm800se-2.mvi  bootlogo.mvi  bootlogo_wait-dm500hd-2.mvi  bootlogo_wait-dm800-2.mvi  bootlogo_wait-dm8000-2.mvi  bootlogo_wait-dm800se-2.mvi  bootlogo_wait.mvi  switchoff-dm500hd-2.mvi  switchoff.mvi
openembedded-1.6/recipes/dreambox/files/: addons.url  dvb-usb-af9015-dm500hd.ko  vtuner  (+4 more)
openembedded-1.6/recipes/dvdbackup/: dvdbackup_0.4.1.bb
openembedded-1.6/recipes/e2openplugins/: enigma2-plugin-systemplugins-crossepg.bb
openembedded-1.6/recipes/enigma2/: enigma2-nemesis.bb  enigma2-plugins.bb  enigma2.bb
openembedded-1.6/recipes/ez-ipupdate/: ez-ipupdate_3.0.10.bb
openembedded-1.6/recipes/images/: dreambox-image.bb
openembedded-1.6/recipes/initscripts/: initscripts-opendreambox_1.0.bb
openembedded-1.6/recipes/linux/: linux-dm7025.bb  linux-dm800se_2.6.18.bb  linux-opendreambox-2.6.18.inc
openembedded-1.6/recipes/nemesis/: ccid.bb  ccid_1.4.0.bb  ccid_1.4.3.bb  ccid_1.4.4.bb  ccid_1.4.5.bb  ccid_1.4.6.bb  crossepg.bb  dreamdts.bb  lcnscanner.bb  nemesis-socket.bb  nemesis-version.bb  pcsc-lite.bb  pcsc-lite_1.6.4.bb  pcsc-lite_1.7.2.bb  pcsc-lite_1.7.3.bb  pcsc-lite_1.7.4.bb  pcsc-lite_1.8.2.bb  pcsc-lite_1.8.3.bb  rtl8187l.bb  sdparm.bb  stayup.bb
openembedded-1.6/recipes/nfs-utils/: nfs-utils_1.1.2.bb
openembedded-1.6/recipes/openssl/: openssl.inc
openembedded-1.6/recipes/samba/: samba.inc
openembedded-1.6/recipes/tasks/: task-opendreambox-base.bb  task-opendreambox-dvdplayer.bb  task-opendreambox-enigma2.bb  task-opendreambox-nemesis.bb  task-opendreambox-wlan.bb
openembedded-1.6/recipes/tuxbox/: libdvbsi++.bb
openembedded-1.6/recipes/v4l-dvb/: v4l-dvb-modules_hg.bb
patch/enigma1/cdk/: Makefile.am  prepare
patch/enigma1/cdk/root/etc/init.d/: Makefile.am  rcS.500  rcS.56x0  rcS.7000
patch/enigma1/enigma/: configure.ac
patch/enigma1/enigma/data/pictures/bm/: Makefile.am
patch/enigma1/enigma/data/pictures/bm/border/: Makefile.am
patch/enigma1/enigma/data/pictures/bm/ency/: Makefile.am
patch/enigma1/enigma/data/pictures/bm/mainmenu/: Makefile.am
patch/enigma1/enigma/data/pictures/bm/window/: Makefile.am
patch/enigma2/: RecordTimer.py  configure.ac  mytest.py  skin.py
patch/enigma2/data/: Makefile.am  encoding.conf  keymap.xml  keymap_7020.xml  keymap_gsw.xml  keymap_gsw_7020.xml  keymap_neutrino.xml  keymap_neutrino_7020.xml  menu.xml  nemesis.xml  radio.mvi  setup.xml  skin.xml  skin.xml.title  skin_default.xml  skin_lcd.xml  skin_oled.xml  skin_sub.xml  unicable.xml
patch/enigma2/data/HD-Glass-15/: Makefile.am  skin.xml
patch/enigma2/data/fonts/: Makefile.am
patch/enigma2/data/piconProv/: Makefile.am
patch/enigma2/data/piconSat/: Makefile.am
patch/enigma2/data/piconSys/: Makefile.am
patch/enigma2/data/skinLight/: Makefile.am
patch/enigma2/data/skin_default/: Makefile.am
patch/enigma2/data/skin_default/buttons/: Makefile.am
patch/enigma2/data/skin_default/frame/: Makefile.am
patch/enigma2/data/skin_default/full/: Makefile.am
patch/enigma2/data/skin_default/general/: Makefile.am
patch/enigma2/data/skin_default/icons/: Makefile.am
patch/enigma2/data/skin_default/menu/: Makefile.am
patch/enigma2/data/skin_default/slider/: Makefile.am
patch/enigma2/data/skin_default/spinner/: Makefile.am
patch/enigma2/lib/python/Components/Renderer/: DescNextEvent.py  Makefile.am  NNextEvent.py  NemesisAhours.py  NemesisEmptyEpg.py  NemesisRefTV.py  NemesisShowReference.py  Picon.py  PiconName.py  RollName.py  ShowTP.py  TimeNextEvent.py
patch/enigma2/main/: Makefile.am  enigma.cpp  nemtool.cpp  nemtool.h  version_info.cpp
patch/enigma2/tools/: enigma2.sh.in
patch/po/enigma1/: Makefile.am  it.po  panel_it.po
patch/po/enigma2/: Makefile.am  de.po.panel  it.po  it.po.panel  lt.po  panel.de.po  panel.it.po  panel_it.po
support/: download.sh  install.sh  install_toolchain.txt  make_all.sh  make_clean.sh  make_clean_linux.sh  make_update_arch.sh
(+324 files in other folders)
