SUBDIRS = countries fonts defaults extensions keymaps skin_default piconProv piconSat piconSys skinLight

dist_pkgdata_DATA = \
	defaultsatlists.xml \
	defaultwizard.xml \
	dreampackagewizard.xml \
	encoding.conf \
	keymap.xml \
	keymap_neutrino.xml \
	menu.xml \
	prev.png \
	radio.mvi \
	rcpositions.xml \
	setup.xml \
	skin_default.xml \
	skin.xml \
	startwizard.xml \
	nemesis.xml \
	tutorialwizard.xml \
	skin_sub.xml \
	skin_lcd.xml \
	skin_oled.xml \
	unicable.xml
