SUBDIRS = countries fonts defaults extensions keymaps skin_default

dist_pkgdata_DATA = \
	defaultsatlists.xml \
	defaultwizard.xml \
	dreampackagewizard.xml \
	encoding.conf \
	keymap.xml \
	keymap_gsw.xml \
	keymap_neutrino.xml \
	keymap_7020.xml \
	keymap_gsw_7020.xml \
	keymap_neutrino_7020.xml \
	menu.xml \
	prev.png \
	radio.mvi \
	pic_frame.png \
	rcpositions.xml \
	setup.xml \
	skin_default.xml \
	skin.xml \
	skin.xml.title \
	startwizard.xml \
	nemesis.xml \
	tutorialwizard.xml \
	skin_sub.xml \
	skin_lcd.xml \
	skin_oled.xml \
	unicable.xml
