SUBDIRS = menu icons buttons spinner frame slider general

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	agc_bar.png \
	arrowdown.png \
	arrowup.png \
	back-main.png \
	bar_ber.png \
	bar_snr.png \
	b_bl.png \
	b_b.png \
	b_br.png \
	ber_bar.png \
	b_l.png \
	border_epg.png \
	border_eventinfo.png \
	border_info.png \
	border_menu_300.png \
	border_menu_350.png \
	border_menu.png \
	border_multiepg.png \
	border.png \
	bottombar.png \
	b_r.png \
	bs_bl.png \
	bs_b.png \
	bs_br.png \
	bs_l.png \
	bs_r.png \
	bs_tl.png \
	bs_t.png \
	bs_tr.png \
	b_tl.png \
	b_t.png \
	b_tr.png \
	bar_se.png \
	channel.png \
	chan_p_bar.png \
	default_wizard.png \
	celserviceeventprogressbar.png \
	div-h.png \
	div-v.png \
	dvr.png \
	dwn-manager.png \
	endback.png \
	end.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	expandable-plugins.png \
	expanded-plugins.png \
	frame_1.png \
	frameclock_75x75.png \
	frame_hd.png \
	h-white.png \
	ico_crypt_off.png \
	ico_crypt_on.png \
	ico_dolby_off.png \
	ico_dolby_on.png \
	ico_format_off.png \
	ico_format_on.png \
	ico_hd_off.png \
	ico_hd_on.png \
	ico_line_off.png \
	ico_line_on.png \
	ico_mp_forward.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_rewind.png \
	ico_txt_off.png \
	ico_txt_on.png \
	info-bg_mp.png \
	info-bg.png \
	key-blue.png \
	key-green_big.png \
	key-green.png \
	key-red_big.png \
	key-red.png \
	key-yellow.png \
	list_bar.png \
	l.png \
	mediaplayer_bg.png \
	media_player_slider.png \
	memory_bar.png \
	misc_p_bar_big.png \
	misc_p_bar.png \
	misc_p_bar_small.png \
	movie_bar.png \
	movie_player_slider.png \
	mp_bar.png \
	mp_buttons.png \
	mp_dvr.png \
	mpslider.png \
	mute.png \
	nab-set.png \
	nactive.png \
	nim_active.png \
	ninactive.png \
	no_coverArt.png \
	now_arrow.png \
	pal.png \
	p_bar.png \
	picon_default.png \
	pm_bar.png \
	pointer.png \
	position_arrow.png \
	position_pointer.png \
	progress_bar.png \
	progress_bg.png \
	progress_big.png \
	progress_medium.png \
	progress.png \
	progress_small.png \
	radio_p_bar.png \
	rcold.png \
	rc.png \
	r.png \
	scale.png \
	screws_mp.png \
	screws.png \
	script-panel.png \
	separator.png \
	s_e_p.png \
	shout_back2.png \
	sleeptimer.png \
	slider_back.png \
	slider.png \
	snr_bar.png \
	tib.png \
	tib-v.png \
	timeline-now.png \
	timeline.png \
	topbar.png \
	unhandled-key.png \
	verticalline-plugins.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	vkey_text.png \
	vol_back.png \
	volume.png \
	v-white.png \
	white.png \
	wizard.png \
	celserviceeventprogressbar.png \
	clk1.png \
	mpslider-m.png \
	unhandled-key.png \
	prev.png