installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
	blue.png \
	blue_pressed.png \
	button_200x40_blue_off.png \
	button_200x40_blue_on.png \
	button_200x60_blue.png \
	button_200x60_green.png \
	button_200x60_red.png \
	button_200x60_yellow.png \
	button_20x20_blue_off.png \
	button_20x20_blue_on.png \
	button_blue_off.png \
	button_blue.png \
	button_green_off.png \
	button_green.png \
	button_red_off.png \
	button_red.png \
	button_yellow_off.png \
	button_yellow.png \
	green-big.png \
	green.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
	key_arrow.png \
	key_blue.png \
	key_empy.png \
	key_green.png \
	key_info.png \
	key_menu.png \
	key_red.png \
	key_video.png \
	key_yellow.png \
	key_text.png \
	led_blue.png \
	led_green.png \
	led_red.png \
	led_yellow.png \
	mp_buttons.png \
	next_200x40_blue_off.png \
	next_200x40_blue_on.png \
	ok.png \
	prev_200x40_blue_off.png \
	prev_200x40_blue_on.png \
	red-big.png \
	red.png \
	yellow.png \
	button_blue.png \
	button_red.png \
	button_green.png \
	button_yellow.png \
	button_blue_yu.png \
	button_green_yu.png \
	button_red_yu.png \
	button_yellow_yu.png \
	select_media-1.png \
	select_media-2.png \
	select_b.png \
	select_p.png \
	select_s.png \
	select_tv.png \
	selected-1.png \
	selected-2.png \
	selected-3.png \
	selected-4.png \
	selected-5.png \
	selected-6.png \
	selected-7.png \
	selected-back.png \
	selected-menu.png \
	title_bar.png \
	smediaplayer.png



