installdir = $(pkgdatadir)/skin_default/frame

dist_install_DATA = \
	frame_174x174.png \
	frame_200x200.png \
	frame_400x200.png \
	frame_400x300.png \
	frame_400x400.png \
	frame_495x210.png \
	frame_510x400.png \
	frame_510x410.png \
	frame_510x510.png \
	frame80_95x75.png \
	frame_95x75.png \
	frame_language.png