installdir = $(pkgdatadir)/skin_default/general

dist_install_DATA = \
	b_bl.png \
	b_b.png \
	b_br.png \
	b_l.png \
	b_r.png \
	b_tl.png \
	b_tls.png \
	b_t.png \
	b_tr.png \
	b_trs.png \
	b_ts.png \
	infobar.png \
	infobar-ex.png \
	mute.png \
	no_coverArt.png \
	picon_movie.png \
	timeline-now.png \
	volume.png \
	wizard.png
