installdir = $(pkgdatadir)/skin_default/icons

dist_install_DATA = \
	about.png \
	addtimer.png \
	cams.png \
	cf.png \
	clock.png \
	device.png \
	dish.png \
	dish_scan.png \
	dmm_logo.png \
	enigma.png \
	epgclock_add.png \
	epgclock.png \
	epgclock_post.png \
	epgclock_pre.png \
	epgclock_prepost.png \
	folder.png \
	get.png \
	hdsettings.png \
	ico_mp_forward.png \
	ico_mp_loop_off.png \
	ico_mp_loop_on.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_random_off.png \
	ico_mp_random_on.png \
	ico_mp_rewind.png \
	ico_mp_stop.png \
	icon_crypt.png \
	icon_dolby.png \
	icon_event.png \
	icon_format.png \
	icon_info.png \
	icon_rec_off.png \
	icon_rec.png \
	icons_off.png \
	icon_sys_no.png \
	icon_txt.png \
	icon_view.png \
	i_crypt_no.png \
	i_crypt.png \
	i_dolby_no.png \
	i_dolby.png \
	i_format_no.png \
	i_format.png \
	i_forward.png \
	i_hd.png \
	infopanel_hddtemp.png \
	input_error.png \
	input_info.png \
	input_keyboard-configured.png \
	input_keyboard.png \
	input_mouse-configured.png \
	input_mouse.png \
	input_question.png \
	input_rcnew-configured.png \
	input_rcnew.png \
	input_rcold-configured.png \
	input_rcold.png \
	i_pause.png \
	ipkpackpanel.png \
	i_play.png \
	i_rec.png \
	i_rewind.png \
	i_sd.png \
	i_sub_no.png \
	i_sub.png \
	i_txt_no.png \
	i_txt.png \
	lock_error.png \
	lock_off.png \
	lock_on.png \
	lock.png \
	lockBouquet.png \
	log.png \
	manual.png \
	marker.png \
	memory.png \
	module.png \
	mp_buttons.png \
	network_wired.png \
	network_wired-active.png \
	network_wired-inactive.png \
	network_wireless.png \
	network_wireless-active.png \
	network_wireless-inactive.png \
	nactive.png \
	network.png \
	nim_active.png \
	ninactive.png \
	no_coverArt.png \
	off_icons.png \
	plugin.png \
	process.png \
	rass_logo.png \
	rass_page1.png \
	rass_page2.png \
	rass_page3.png \
	rass_page4.png \
	rass.png \
	record.png \
	rec.png \
	redx.png \
	remove.png \
	repeat_off.png \
	repeat_on.png \
	save.png \
	scan-c.png \
	scan-s.png \
	scan-t.png \
	search.png \
	service.png \
	setup.png \
	sleeptimer.png \
	space.png \
	swapsettings.png \
	terminal.png \
	timer.png \
	usb.png \
	user.png \
	vlc.png \
	whitev.png \
	wizard.png \
	selectioncross.png \
	unlock.png \
	unlockBouquet.png

