installdir = $(pkgdatadir)/skin_default/menu

dist_install_DATA = \
	back-main.png \
	back-media-dvd.png \
	back-media.png \
	box.png \
	bp_deko.png \
	dvd_player.png \
	gp_deko.png \
	information.png \
	main_buttons.png \
	media_player.png \
	menu_off.png \
	menu_on.png \
	on_main_menu_250x50.png \
	on_main_menu_485x106.png \
	on_main_menu_485x50.png \
	on_main_menu_485x64.png \
	on_main_menu_485x78.png \
	on_main_menu_485x92.png \
	on_main_menu_595x50.png \
	on_main_menu_browser.png \
	on_main_menu_dvd.png \
	on_main_menu_info.png \
	on_main_menu_movie.png \
	on_main_menu_music.png \
	on_main_menu_photo.png \
	on_main_menu_plugin.png \
	on_main_menu_scart.png \
	on_main_menu_setup.png \
	on_main_menu_shutdown.png \
	on_main_menu_shutdown_reboot.png \
	on_main_menu_shutdown_restartshell.png \
	on_main_menu_shutdown_shutdown.png \
	on_main_menu_shutdown_standby.png \
	on_main_menu_standby.png \
	on_main_menu_timer.png \
	on_main_menu_tv.png \
	plugins.png \
	scart.png \
	select300_45black.png \
	select600_50.png \
	setup.png \
	shutdown.png \
	subtitles.png \
	timer.png
