installdir = $(pkgdatadir)/skin_default/slider

dist_install_DATA = \
	slider_10_bg_ab.png \
	slider_10_bg_bb.png \
	slider_10_bg_bc.png \
	slider_10_fg_ab.png \
	slider_10_fg_bb.png \
	slider_10_fg_bc.png \
	slider_10_fg.png \
	slider_10.png \
	slider_10_vbg.png \
	slider_10_vfg_ab.png \
	slider_10_vfg_bb.png \
	slider_10_vfg_bc.png \
	slider_10x150_hbg.png \
	slider_10x200_hbg.png \
	slider_10x200_vbg.png \
	slider_10x250_vbg.png \
	slider_10x260_hbg.png \
	slider_10x280_hbg.png \
	slider_10x350_hbg.png \
	slider_10x350_vbg.png \
	slider_10x376_vbg.png \
	slider_10x384_vbg.png \
	slider_10x400_hbg.png \
	slider_10x400_vbg.png \
	slider_10x450_vbg.png \
	slider_10x497_hbg.png \
	slider_10x497_hfg.png \
	slider_10x508_hbg.png \
	slider_10x508_hfg.png \
	slider_20_bg_ab.png \
	slider_20_bg_bb.png \
	slider_20_bg_bc.png \
	slider_20_fg_ab.png \
	slider_20_fg_bb.png \
	slider_20_fg_bc.png \
	slider_20.png \
	slider_gauge_bg.png \
	slider_gauge_fg.png \
	slider_main.png \
	slider_tv.png
