SUBDIRS = border ency mainmenu window

installdir = $(TUXBOXDATADIR)/enigma/pictures/bm

install_DATA = \
	agc_bar.png ber_bar.png bm_bg.png bm_g.png bm_s.png button_blue.png button_green_no.png button_green.png \
	button_grey.png button_intg.png button_int.png button_nem.png button_net.png button_red_no.png \
	button_red.png button_scg.png button_sc.png button_yellow.png checked.png ck_g.png combo_arrow.png \
	diseqc_0-fs8.png diseqc_1-fs8.png diseqc_2-fs8.png dream.png dvr-fs8.png eni.png error.png ext_720_bg.png \
	ext_720_ng.png ext_s.png folder.png g_ico_audio_off.png g_ico_audio_ong.png g_ico_audio_on.png g_ico_nim_a.png \
	g_progress_event_np.png g_progress_event.png ico_crypt_off.png ico_crypt_ong.png ico_crypt_on.png \
	ico_disk_off.png ico_disk_ong.png ico_disk_on.png ico_dolby_off.png ico_dolby_ong.png ico_dolby_on.png ico_format_off.png \
	ico_format_ong.png ico_format_on.png ico_txt_off.png ico_txt_ong.png ico_txt_on.png info.png key-blue.png \
	key-green.png key-red.png key-yellow.png lbarrow_down.png lbarrow_left.png lbarrow.png lbarrow_right.png \
	lbarrow_up.png lcd-clock.png lcdmenu.png lcd-speaker.png logo.png mute.png NimB_Inactive.png offline.png \
	online.png progress_volume.png question.png separator.png sig_bar.png snr_bar.png unchecked.png video.png \
	volume_slider.png volumeslider.png
