installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py Picon.py Pig.py \
	FrontpanelLed.py NemesisAhours.py NemesisEmptyEpg.py \
	NemesisRefTV.py NemesisShowReference.py RollName.py ShowTP.py PiconName.py \
	NNextEvent.py DescNextEvent.py TimeNextEvent.py
