installdir = $(TUXBOXDATADIR)/enigma/pictures/bm/ency

install_DATA = \
	beta_ecm.png beta_emm.png beta_no.png conax_ecm.png conax_emm.png conax_no.png cw_ecm.png \
	cw_emm.png cw_no.png irdeto_ecm.png irdeto_emm.png irdeto_no.png nagra_ecm.png nagra_emm.png \
	nagra_no.png nds_ecm.png nds_emm.png nds_no.png seca_ecm.png seca_emm.png seca_no.png via_ecm.png \
	via_emm.png via_no.png
